src/Antlar/JsxParser.java
// Generated from C:/Users/bramjzone/Downloads/Compiler For Season 1/Compiler For Season 1/src/Antlar\JsxParser.g4 by ANTLR 4.10.1
package Antlar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JsxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OpenParen=1, CloseParen=2, OpenBracket=3, CloseBracket=4, OpenBrace=5, 
		CloseBrace=6, Colon=7, LessThan=8, MoreThan=9, Divide=10, Minus=11, Assign=12, 
		SemiColon=13, ARROW=14, Plus=15, Dot=16, From=17, If=18, Else=19, Hashtag=20, 
		QuestionMark=21, Default=22, Export=23, Import=24, Style=25, Image=26, 
		Button=27, Height=28, Width=29, MarginLeft=30, MarginRight=31, MarginTop=32, 
		MarginBottom=33, Multiply=34, As=35, Return=36, Var=37, Const=38, StrictLet=39, 
		Comma=40, Async=41, BackTick=42, Function_=43, UseEffect=44, UseRef=45, 
		UseState=46, Ellipsis=47, Identifier=48, WS=49, StringLiteral=50, NullLiteral=51, 
		BooleanLiteral=52, DecimalLiteral=53, HexIntegerLiteral=54, OctalIntegerLiteral=55, 
		OctalIntegerLiteral2=56, BinaryIntegerLiteral=57, BigHexIntegerLiteral=58, 
		BigOctalIntegerLiteral=59, BigBinaryIntegerLiteral=60, BigDecimalIntegerLiteral=61, 
		TemplateStringStartExpression=62, TemplateStringAtom=63, TagOpen=64, TagClose=65, 
		TagSlashClose=66, TagSlash=67, TagName=68, AttributeValue=69, Attribute=70, 
		TagEquals=71;
	public static final int
		RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_statementList = 4, RULE_importStatement = 5, RULE_importFromBlock = 6, 
		RULE_moduleItems = 7, RULE_importDefault = 8, RULE_importNamespace = 9, 
		RULE_importFrom = 10, RULE_aliasName = 11, RULE_exportStatement = 12, 
		RULE_declaration = 13, RULE_variableStatement = 14, RULE_variableDeclarationList = 15, 
		RULE_variableDeclaration = 16, RULE_emptyStatement_ = 17, RULE_expressionStatement = 18, 
		RULE_ifStatement = 19, RULE_varModifier = 20, RULE_returnStatement = 21, 
		RULE_functionDeclaration = 22, RULE_formalParameterList = 23, RULE_formalParameterArg = 24, 
		RULE_lastFormalParameterArg = 25, RULE_functionBody = 26, RULE_sourceElements = 27, 
		RULE_arrayLiteral = 28, RULE_elementList = 29, RULE_arrayElement = 30, 
		RULE_propertyAssignment = 31, RULE_propertyName = 32, RULE_arguments = 33, 
		RULE_argument = 34, RULE_expressionSequence = 35, RULE_reactHook = 36, 
		RULE_useEffectHook = 37, RULE_useRefHook = 38, RULE_useStateHook = 39, 
		RULE_singleExpression = 40, RULE_htmlElements = 41, RULE_htmlElement = 42, 
		RULE_htmlContent = 43, RULE_htmlTagStartName = 44, RULE_htmlTagClosingName = 45, 
		RULE_htmlTagName = 46, RULE_htmlAttribute = 47, RULE_htmlAttributeName = 48, 
		RULE_htmlChardata = 49, RULE_htmlAttributeValue = 50, RULE_style = 51, 
		RULE_height = 52, RULE_width = 53, RULE_margin = 54, RULE_marginKay = 55, 
		RULE_assignable = 56, RULE_objectLiteral = 57, RULE_objectExpressionSequence = 58, 
		RULE_anoymousFunction = 59, RULE_arrowFunctionParameters = 60, RULE_arrowFunctionBody = 61, 
		RULE_literal = 62, RULE_templateStringLiteral = 63, RULE_templateStringAtom = 64, 
		RULE_numericLiteral = 65, RULE_identifierName = 66, RULE_identifier = 67, 
		RULE_reservedWord = 68, RULE_keyword = 69, RULE_let_ = 70, RULE_eos = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sourceElement", "statement", "block", "statementList", "importStatement", 
			"importFromBlock", "moduleItems", "importDefault", "importNamespace", 
			"importFrom", "aliasName", "exportStatement", "declaration", "variableStatement", 
			"variableDeclarationList", "variableDeclaration", "emptyStatement_", 
			"expressionStatement", "ifStatement", "varModifier", "returnStatement", 
			"functionDeclaration", "formalParameterList", "formalParameterArg", "lastFormalParameterArg", 
			"functionBody", "sourceElements", "arrayLiteral", "elementList", "arrayElement", 
			"propertyAssignment", "propertyName", "arguments", "argument", "expressionSequence", 
			"reactHook", "useEffectHook", "useRefHook", "useStateHook", "singleExpression", 
			"htmlElements", "htmlElement", "htmlContent", "htmlTagStartName", "htmlTagClosingName", 
			"htmlTagName", "htmlAttribute", "htmlAttributeName", "htmlChardata", 
			"htmlAttributeValue", "style", "height", "width", "margin", "marginKay", 
			"assignable", "objectLiteral", "objectExpressionSequence", "anoymousFunction", 
			"arrowFunctionParameters", "arrowFunctionBody", "literal", "templateStringLiteral", 
			"templateStringAtom", "numericLiteral", "identifierName", "identifier", 
			"reservedWord", "keyword", "let_", "eos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "'<'", "'>'", 
			"'/'", "'-'", "'='", "';'", "'=>'", "'+'", "'.'", "'from'", "'if'", "'else'", 
			"'#'", "'?'", "'default'", "'export'", "'import'", "'style'", "'image'", 
			"'button'", "'height'", "'width'", "'margin-left'", "'margin-right'", 
			"' margin-top'", "'margin-bottom'", "'*'", "'as'", "'return'", "'var'", 
			"'const'", "'let'", "','", "'async'", null, "'function'", "'useEffect'", 
			"'useRef'", "'useState'", "'...'", null, null, null, "'null'", null, 
			null, null, null, null, null, null, null, null, null, "'${'", null, null, 
			null, "'/>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OpenParen", "CloseParen", "OpenBracket", "CloseBracket", "OpenBrace", 
			"CloseBrace", "Colon", "LessThan", "MoreThan", "Divide", "Minus", "Assign", 
			"SemiColon", "ARROW", "Plus", "Dot", "From", "If", "Else", "Hashtag", 
			"QuestionMark", "Default", "Export", "Import", "Style", "Image", "Button", 
			"Height", "Width", "MarginLeft", "MarginRight", "MarginTop", "MarginBottom", 
			"Multiply", "As", "Return", "Var", "Const", "StrictLet", "Comma", "Async", 
			"BackTick", "Function_", "UseEffect", "UseRef", "UseState", "Ellipsis", 
			"Identifier", "WS", "StringLiteral", "NullLiteral", "BooleanLiteral", 
			"DecimalLiteral", "HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", 
			"BinaryIntegerLiteral", "BigHexIntegerLiteral", "BigOctalIntegerLiteral", 
			"BigBinaryIntegerLiteral", "BigDecimalIntegerLiteral", "TemplateStringStartExpression", 
			"TemplateStringAtom", "TagOpen", "TagClose", "TagSlashClose", "TagSlash", 
			"TagName", "AttributeValue", "Attribute", "TagEquals"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JsxParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JsxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JsxParser.EOF, 0); }
		public SourceElementsContext sourceElements() {
			return getRuleContext(SourceElementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenParen) | (1L << OpenBracket) | (1L << OpenBrace) | (1L << LessThan) | (1L << SemiColon) | (1L << If) | (1L << Export) | (1L << Import) | (1L << Return) | (1L << Var) | (1L << Const) | (1L << StrictLet) | (1L << Async) | (1L << Function_) | (1L << UseEffect) | (1L << UseRef) | (1L << UseState) | (1L << Ellipsis) | (1L << Identifier) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << BooleanLiteral) | (1L << DecimalLiteral))) != 0)) {
				{
				setState(144);
				sourceElements();
				}
			}

			setState(147);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceElementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SourceElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterSourceElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitSourceElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitSourceElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceElementContext sourceElement() throws RecognitionException {
		SourceElementContext _localctx = new SourceElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sourceElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public EmptyStatement_Context emptyStatement_() {
			return getRuleContext(EmptyStatement_Context.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public VariableStatementContext variableStatement() {
			return getRuleContext(VariableStatementContext.class,0);
		}
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ReactHookContext reactHook() {
			return getRuleContext(ReactHookContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				emptyStatement_();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				functionDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				returnStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				expressionStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(156);
				exportStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(157);
				ifStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(158);
				variableStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(159);
				importStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(160);
				reactHook();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OpenBrace() { return getToken(JsxParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(JsxParser.CloseBrace, 0); }
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(OpenBrace);
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenParen) | (1L << OpenBracket) | (1L << OpenBrace) | (1L << LessThan) | (1L << SemiColon) | (1L << If) | (1L << Export) | (1L << Import) | (1L << Return) | (1L << Var) | (1L << Const) | (1L << StrictLet) | (1L << Async) | (1L << Function_) | (1L << UseEffect) | (1L << UseRef) | (1L << UseState) | (1L << Ellipsis) | (1L << Identifier) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << BooleanLiteral) | (1L << DecimalLiteral))) != 0)) {
				{
				setState(164);
				statementList();
				}
			}

			setState(167);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(169);
				statement();
				}
				}
				setState(172); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenParen) | (1L << OpenBracket) | (1L << OpenBrace) | (1L << LessThan) | (1L << SemiColon) | (1L << If) | (1L << Export) | (1L << Import) | (1L << Return) | (1L << Var) | (1L << Const) | (1L << StrictLet) | (1L << Async) | (1L << Function_) | (1L << UseEffect) | (1L << UseRef) | (1L << UseState) | (1L << Ellipsis) | (1L << Identifier) | (1L << StringLiteral) | (1L << NullLiteral) | (1L << BooleanLiteral) | (1L << DecimalLiteral))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(JsxParser.Import, 0); }
		public ImportFromBlockContext importFromBlock() {
			return getRuleContext(ImportFromBlockContext.class,0);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(Import);
			setState(175);
			importFromBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportFromBlockContext extends ParserRuleContext {
		public ImportFromContext importFrom() {
			return getRuleContext(ImportFromContext.class,0);
		}
		public EosContext eos() {
			return getRuleContext(EosContext.class,0);
		}
		public ImportNamespaceContext importNamespace() {
			return getRuleContext(ImportNamespaceContext.class,0);
		}
		public ModuleItemsContext moduleItems() {
			return getRuleContext(ModuleItemsContext.class,0);
		}
		public ImportDefaultContext importDefault() {
			return getRuleContext(ImportDefaultContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(JsxParser.StringLiteral, 0); }
		public ImportFromBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importFromBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).enterImportFromBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsxParserListener ) ((JsxParserListener)listener).exitImportFromBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsxParserVisitor ) return ((JsxParserVisitor<? extends T>)visitor).visitImportFromBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportFromBlockContext importFromBlock() throws RecognitionException {
		ImportFromBlockContext _localctx = new ImportFromBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importFromBlock);
		try {
			setState(189);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpenBrace:
			case From:
			case Default:
			case Export:
			case Import:
			case Style:
			case Multiply:
			case Async:
			case Function_:
			case UseEffect:
			case UseRef:
			case UseState:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(177);
					importDefault();
					}
					break;
				}
				setState(182);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(180);
					importNamespace();
					}
					break;
				case 2:
					{
					setState(181);
					moduleItems();
					}
					break;
				}
				setState(184);
				importFrom();
				setState(185);
				eos();
				}
				break;
			case StringLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				match(StringLiteral);
				setState(188);
				eos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
